# rpi4-object-tracking

./: CMakeLists.txt
src/: main.cpp
